# LR6

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  common.cc  main.cc
Task_1/: flowchart.drawio  solution.cc
Task_2/: flowchart.drawio  generate_table.py  solution.cc
Task_3/: flowchart.drawio  solution.cpp
include/: solutions.h
tests/: all.cpp  fake-input.cpp  solution-mocker.h  task1.cpp  task2.cpp  task3.cpp
